chg: comment w/ options for graphite

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,3 +41,22 @@ services:
       - ./data/whisper:/opt/graphite/storage/whisper
       - ./data/grafana:/opt/grafana/data
       - ./log/graphite:/opt/graphite/storage/log
+
+  # jmxtrans:
+  #   image: pitrho/jmxtrans:v0.1.1
+  #   labels:
+  #     io.rancher.scheduler.global: 'true'
+  #     io.rancher.scheduler.affinity:host_label: cassandra-server=true
+  #     io.rancher.sidekicks: cassandra-metrics-config
+  #   log_driver: "json-file"
+  #   log_opt:
+  #     max-size: "50m"
+  #     max-file: "7"
+  #   environment:
+  #     SECONDS_BETWEEN_RUNS: $SECONDS_BETWEEN_RUNS
+  #     CONTINUE_ON_ERROR: $CONTINUE_ON_ERROR
+  #     FILENAME: /config/queries.json
+  #     JMXTRANS_OPTS: -Djmxtrans.log.level=WARN -Djmxtrans.log.dir=/var/log/jmxtrans -Dlog4j.configuration=file:/config/log4j_logentries.xml
+  #     JAVA_OPTS: -cp /usr/share/jmxtrans/lib/jmxtrans-all.jar:/config/logentries-appender.jar -Djava.awt.headless=true -Djava.net.preferIPv4Stack=true
+  #   volumes_from:
+  #     - cassandra-metrics-config
