--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,20 +5,39 @@ version: "3"
 services:
   grafana-graphite:
     image: bossjones/boss-grafana-graphite:latest
-    network_mode: host
+    network_mode: "host"
     # container_name: boss-grafana-graphite
     ports:
+      # protocols (newline delimited, pickle)
+      # the Grafana web interface
       - '127.0.0.1:80:80'
+      # the Graphite web port
       - '127.0.0.1:81:81'
+      # the StatsD port.
       - '127.0.0.1:8125:8125/udp'
+      # the StatsD administrative port.
       - '127.0.0.1:8126:8126'
+      # carbon: newline
       - '127.0.0.1:2003:2003'
+      # carbon: delimited
+      - '127.0.0.1:2004:2004'
+      # carbon: pickle
+      - '127.0.0.1:7002:7002'
     expose:
+      # the Grafana web interface
       - '80'
+      # the Graphite web port
       - '81'
+      # the StatsD port.
       - '8125'
+      # the StatsD administrative port.
       - '8126'
+      # carbon: newline
       - '2003'
+      # carbon: delimited
+      - '2004'
+      # carbon: pickle
+      - '7002'
     logging:
       driver: "json-file"
       options:
@@ -30,7 +49,7 @@ services:
       - "moby:127.0.0.1"
       - "default:127.0.0.1"
       - "dockerhost:127.0.0.1"
-      - "latveria:127.0.0.1"
+      - "baxter:127.0.0.1"
     restart: always
     healthcheck:
       test: curl -s http://localhost/ || exit 1
