chg: nobody user

--- a/grafana/custom.ini
+++ b/grafana/custom.ini
@@ -51,7 +51,7 @@
 ;type = sqlite3
 ;host = 127.0.0.1:3306
 ;name = grafana
-;user = root
+user = nobody
 ;password =
 
 # For "postgres" only, either "disable", "require" or "verify-full"
