--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ version: "3"
 
 services:
   grafana-graphite:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    # image: elasticsearch
     image: bossjones/boss-grafana-graphite:latest
     network_mode: "host"
     # container_name: boss-grafana-graphite
