--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,14 @@ services:
       dockerfile: Dockerfile
     # image: elasticsearch
     image: bossjones/boss-grafana-graphite:latest
-    network_mode: "host"
+    # network_mode: "host"
     # container_name: boss-grafana-graphite
     ports:
       # protocols (newline delimited, pickle)
       # the Grafana web interface
-      - '8080:80'
+      - '80:80'
       # the Graphite web port
-      - '8180:81'
+      - '81:81'
       # the StatsD port.
       - '8125:8125/udp'
       # the StatsD administrative port.
@@ -27,21 +27,21 @@ services:
       - '2004:2004'
       # carbon: pickle
       - '7002:7002'
-    expose:
-      # the Grafana web interface
-      - '80'
-      # the Graphite web port
-      - '81'
-      # the StatsD port.
-      - '8125'
-      # the StatsD administrative port.
-      - '8126'
-      # carbon: newline
-      - '2003'
-      # carbon: delimited
-      - '2004'
-      # carbon: pickle
-      - '7002'
+    # expose:
+    #   # the Grafana web interface
+    #   - '80'
+    #   # the Graphite web port
+    #   - '81'
+    #   # the StatsD port.
+    #   - '8125'
+    #   # the StatsD administrative port.
+    #   - '8126'
+    #   # carbon: newline
+    #   - '2003'
+    #   # carbon: delimited
+    #   - '2004'
+    #   # carbon: pickle
+    #   - '7002'
     logging:
       driver: "json-file"
       options:
@@ -49,11 +49,11 @@ services:
         max-file: "10"
     # source: https://github.com/moby/moby/issues/23910
     # Docker should use the host network DNS server
-    extra_hosts:
-      - "moby:127.0.0.1"
-      - "default:127.0.0.1"
-      - "dockerhost:127.0.0.1"
-      - "baxter:127.0.0.1"
+    # extra_hosts:
+    #   - "moby:127.0.0.1"
+    #   - "default:127.0.0.1"
+    #   - "dockerhost:127.0.0.1"
+    #   - "baxter:127.0.0.1"
     restart: always
     healthcheck:
       test: curl -s http://localhost/ || exit 1
