--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,10 +59,15 @@ services:
       interval: 5s
       timeout: 2s
       retries: 15
+    # volumes:
+    #   - ./data/whisper:/opt/graphite/storage/whisper
+    #   - ./data/grafana:/opt/grafana/data
+    #   - ./log/graphite:/opt/graphite/storage/log
     volumes:
       - ./data/whisper:/opt/graphite/storage/whisper
       - ./data/grafana:/opt/grafana/data
       - ./log/graphite:/opt/graphite/storage/log
+      - ./log/supervisor:/var/log/supervisor
 
   # jmxtrans:
   #   image: pitrho/jmxtrans:v0.1.1
