--- a/graphite/carbon.conf
+++ b/graphite/carbon.conf
@@ -4,6 +4,7 @@ LOCAL_DATA_DIR = /opt/graphite/storage/whisper/
 # Specify the user to drop privileges to
 # If this is blank carbon runs as the user that invokes it
 # This user must have write access to the local data directory
+# USER = pi
 USER =
 
 # Limit the size of the cache to avoid swapping or becoming CPU bound.
